--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "monochrome-notes",
   "version": "0.1.0",
-  "homepage": "https://satvikg2002.github.io/monochrome-notes",
+  "homepage": "https://satvikg2002.github.io/crumpled-notes",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
